#7 Clean up pronunciation media naming
